fix print layout bug

--- a/css/gov/gov.css
+++ b/css/gov/gov.css
@@ -228,9 +228,25 @@ input[type="text"]::placeholder, input[type="email"]::placeholder, textarea::pla
     cursor: not-allowed;
 }
 
-/* Hides button while printing */
+/* Print Layout Styles */
 @media print {
     .print-container {
+        /* Hides button while printing */
         display: none;
+    }
+    textarea {
+        height: auto !important;
+        overflow: hidden;
+        resize: none;
+    }
+    body {
+        margin: 0;
+        background-color: white;
+    }
+
+    .last-container {
+        /* Avoids splitting this container across pages */
+        break-inside: avoid;
+        page-break-inside: avoid;
     }
 }
